fix(css): Fixed CSS styling so that when there is a banner it does not interfere with the navigation menu on mobile web

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -606,7 +606,7 @@ input.noselect {
   font-size: 18px;
 }
 .mobileNavMenu {
-  position: fixed;
+  position: absolute;
   height: calc(100% - 60px);
   box-sizing: border-box;
   top: 60px;
